turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:25: error: not found: value color
	setCouleur(color.magenta);
                   ^